plugins/transformation/req-transformer/2-echo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: request-transformer-plugin
  namespace: testing
  annotations:
    konghq.com/plugins: request-transformer-plugin
spec:
  ingressClassName: kong
  rules:
  - http:
      paths:
      - path: /request-transformer
        pathType: ImplementationSpecific
        backend:
          service:
            name: echo
            port:
              number: 80
